<resources>
    <string name="app_name">Covid In Europe</string>
    <string name="Botão_Criar_Doente">Insert</string>
    <string name="Botão_Ver">Check</string>
    <string name="Aplicacão_Nome">Covid-19 in Europe</string>
    <string name="Ficha_Inscrição">Registration Form</string>
    <string name="Nome">Full Name:</string>
    <string name="Data_Nascimento">Date of Birth:</string>
    <string name="Estado_Atual">Current State:</string>
    <string name="Data_est_atual">Current State Date:</string>
    <string name="Botão_Inscrever">Regist</string>
    <string name="GeneroF">Female</string>
    <string name="GeneroM">Male</string>
    <string name="DoencaCronicaSim">Yes</string>
    <string name="DoencaCronicaNao">No</string>
    <string name="Genero">Gender:</string>
    <string name="DoenteCronico">Chronic Patient:</string>
    <string name="EstadoInfetado">Infected</string>
    <string name="EstadoRecuperado">Recovered</string>
    <string name="EstadoCritico">Critical</string>
    <string name="EstadoObito">Deceased</string>
    <string name="Nacionalidade">Country:</string>
    <string name="País_Albânia">Albania</string>
    <string name="País_Alemanha">Germany</string>
    <string name="País_Andorra">Andorra</string>
    <string name="País_Áustria">Austria</string>
    <string name="País_Bélgica">Belgium</string>
    <string name="País_Arménia">Armenia</string>
    <string name="País_Azerbaijão">Azerbaijan</string>
    <string name="País_Bielorrússia">Belarus</string>
    <string name="País_Bósnia">Bosnia</string>
    <string name="País_Bulgária">Bulgaria</string>
    <string name="País_Cazaquistão">Kazakhstan</string>
    <string name="País_Chipre">Cyprus</string>
    <string name="País_Croácia">Croatia</string>
    <string name="País_Dinamarca">Denmark</string>
    <string name="País_Eslováquia">Slovakia</string>
    <string name="País_Eslovênia">Slovenia</string>
    <string name="País_Estónia">Estonia</string>
    <string name="País_Finlândia">Finland</string>
    <string name="País_Espanha">Spain</string>
    <string name="País_França">France</string>
    <string name="País_Geórgia">Georgia</string>
    <string name="País_Gibraltar">Gibraltar</string>
    <string name="País_Grécia">Greece</string>
    <string name="País_Hungria">Hungary</string>
    <string name="País_Irlanda">Irland</string>
    <string name="País_Islândia">Iceland</string>
    <string name="País_Itália">Italy</string>
    <string name="País_Kosovo">Kosovo</string>
    <string name="País_Letônia">Latvia</string>
    <string name="País_Lituânia">Lithuania</string>
    <string name="País_Luxemburgo">Luxembourg</string>
    <string name="País_MacedôniaDoNorte">North Macedonia</string>
    <string name="País_Malta">Malta</string>
    <string name="País_Moldávia">Moldavia</string>
    <string name="País_Noruega">Norway</string>
    <string name="País_Holanda">Netherlands</string>
    <string name="País_Polónia">Poland</string>
    <string name="País_Portugal">Portugal</string>
    <string name="País_ReinoUnido">United Kingdom</string>
    <string name="País_Roménia">Romania</string>
    <string name="País_Rússia">Russia</string>
    <string name="País_SanMarino">San Marino</string>
    <string name="País_Sérvia">Serbia</string>
    <string name="País_Suécia">Sweden</string>
    <string name="País_Suiça">Switzerland</string>
    <string name="País_Turquia">Turquia</string>
    <string name="País_Ucrânia">Ukraine</string>
    <string name="Paciente">Patients</string>
    <string name="Botão_Editar">Edit</string>
    <string name="Botão_Eliminar">Eliminate</string>
    <string name="Campo_Obrigatorio">Required field!</string>
    <string name="CampoInválido">" Invalid Field! (dd/MM/yyyy)"</string>
    <string name="Botão_Noticias">News</string>
    <string name="Nova_Noticia">New News</string>
    <string name="Titulo">Title:</string>
    <string name="Descricao">Description:</string>
    <string name="Data_Noticia">Date:</string>
    <string name="Criar_Not">Create</string>
    <string name="noticias">imagemFuncoNoticias</string>
    <string name="Name_name">Name:</string>
    <string name="Pais_pais">Nationality:</string>
    <string name="Genero_genero">Gender:</string>
    <string name="PaisParaVer">Choose Country</string>
    <string name="DataDePublicação">Publication date:</string>
    <string name="Pais_Noticia">Country:</string>
    <string name="Edit_New">Edit New</string>
    <string name="Cancelar">Cancel</string>
    <string name="SucessoCriacao">Successfully created</string>
    <string name="CriacaoFalhada">Failed Creation</string>
</resources>
