<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DisplayCreateNoticia">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:hint="@string/Nova_Noticia"
        android:textColorHint="#000000"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="17dp"
        android:layout_marginRight="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInputEditTextTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Titulo" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="338dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:hint="@string/Nacionalidade"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerPaisNot"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginLeft="-4dp"
                android:layout_weight="1" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputEditTextDescricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Descricao" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/TextInputEditTextDataNot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Data_Noticia"
                        android:inputType="date" />
                </com.google.android.material.textfield.TextInputLayout>


            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonCriarNot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="NovaNoticia"
        android:text="@string/Criar_Not"
        android:textSize="16sp" />

</LinearLayout>

