<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imagemfundo"
    tools:context=".MainActivity">

    //https://www.youtube.com/watch?v=ezpOmH50Xdg --> android:background="@drawable/imagemfundo"


    <Button
        android:id="@+id/buttonCriar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:onClick="Pacientes"
        android:text="@string/Paciente"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonNoticias"
        app:layout_constraintEnd_toStartOf="@+id/buttonCheck"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="45dp"
        android:onClick="VerDados"
        android:text="@string/Botão_Ver"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonNoticias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Noticias"
        android:text="@string/Botão_Noticias"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonCheck"
        app:layout_constraintEnd_toStartOf="@+id/buttonCheck"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toEndOf="@+id/buttonCriar" />

    <TextView
        android:id="@+id/textViewNomeApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/Aplicacão_Nome"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009" />

</androidx.constraintlayout.widget.ConstraintLayout>